create table if not exists adverts
(
    id            bigint generated by default as identity,
    date          timestamp(0),
    description   varchar(255),
    premium       boolean default false,
    price         double precision,
    title         varchar(255),
    user_id       bigint,
    ban           boolean,
    premium_end   date,
    premium_start timestamp(0),
    constraint advert_pkey
        primary key (id),
    constraint adverts_users_id_fk
        foreign key (user_id) references users
);

